--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="http://fonts.cdnfonts.com/css/quicksand-x" rel="stylesheet">
-    <link href="http://fonts.cdnfonts.com/css/fafers-technical" rel="stylesheet">
-    <link href="http://fonts.cdnfonts.com/css/droid-sans-mono-2" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/quicksand-x" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/fafers-technical" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/droid-sans-mono-2" rel="stylesheet">
                 
     <link rel="stylesheet" href="translator.css">
     <title>Translator</title>
