responsive done for sm devices

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 swap_horiz
                 </span>
             <div class="translateTo">
-                Translate To 
+               <div class="to">Translate To</div>  
 
                 <select class="translateToLang" onchange="translateToLang()" >
                     <option value="en">English</option>
