meta image updated

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <meta property="og:url" content="https://anne-translator.netlify.app/">
         <meta property="og:title" content="Translator">
         <meta property="og:description" content="Text translation: Translate between 18 languages and adding more ">
-        <meta property="og:image" content="https://anne-translator.netlify.app/trans.svg">
+        <meta property="og:image" content="https://anne-translator.netlify.app/trans.png">
     
         <!-- Twitter -->
-        <meta property="twitter:card" content="https://anne-translator.netlify.app/trans.svg">
-        <meta property="twitter:url" content="https://anne-translator.netlify.app/trans.svg">
+        <meta property="twitter:card" content="https://anne-translator.netlify.app/trans.png">
+        <meta property="twitter:url" content="https://anne-translator.netlify.app/trans.png">
         <meta property="twitter:title" content="A Simple Translator">
         <meta property="twitter:description" content="Text translation: Translate between 18 languages and adding more">
-        <meta property="twitter:image" content="https://anne-translator.netlify.app/trans.svg">
+        <meta property="twitter:image" content="https://anne-translator.netlify.app/trans.png">
     
 </head>
 <body>
