--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <article>
             <div class="translateFrom">
 
-                Translate  From 
+                <div class="from">Translate  From</div> 
                 <select class="translateFromLang" onchange="translateFromLang()">
                     <option value="en">English</option>
                     <option value="ar">Arabic</option>
