made translate to read only

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="text">
                 <textarea oninput="getFromValue()"; class="from-text-value" autofocus></textarea>
-                <textarea class="to-text-value"></textarea>
+                <textarea class="to-text-value" readonly></textarea>
             </div>    
             <button onclick="main()">Translate</button>
         </article>
